--- a/source/html/2013-12-20.html
+++ b/source/html/2013-12-20.html
@@ -17,7 +17,7 @@
       }
     </script>
   </head>
-  <body>
-    <div id="chart_div" style="width: 1440px; height: 900px;"></div>
+  <body onresize="drawChart()" >
+    <div id="chart_div" style="width: 90%; height: 90%;"></div>
   </body>
 </html>
