--- a/html/2013-12-21.html
+++ b/html/2013-12-21.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <script type="text/javascript" src="https://www.google.com/jsapi"></script>
+    <script type="text/javascript" src="http://www.google.com/jsapi"></script>
     <script type="text/javascript" src="js/2013-12-21.js"></script>
     <script type="text/javascript">
       google.load("visualization", "1", {packages:["corechart"]});
